--- a/.github/workflows/attendence.yaml
+++ b/.github/workflows/attendence.yaml
@@ -1,9 +1,8 @@
 name: Punch in
 
 on:
-  - workflow_dispatch:
-  - push:
-  - schedule:
+  push:
+  schedule:
     - cron: '* 10 * * *'
     - cron: '* 19 * * *'
 
