--- a/.github/workflows/attendence.yaml
+++ b/.github/workflows/attendence.yaml
@@ -19,6 +19,8 @@ jobs:
       ACCOUNT: ${{ secrets.ACCOUNT}}
       PASSWORD: ${{ secrets.PASSWORD}}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: debug
         uses: ./
         with:
