--- a/.github/workflows/attendence.yaml
+++ b/.github/workflows/attendence.yaml
@@ -2,8 +2,8 @@ name: Punch in
 
 on:
   schedule:
-    - cron: '* 2 * * *'
-    - cron: '* 11 * * *'
+    - cron: '0 2 * * 1-5'
+    - cron: '0 11 * * 1-5'
 
 jobs:
   attendence:
@@ -20,12 +20,12 @@ jobs:
       #   with:
       #     mode: out
       - name: Punch in
-        if: github.event.schedule != '* 2 * * *'
+        if: github.event.schedule != '0 2 * * 1-5'
         uses: ./
         with:
           mode: in
       - name: Punch out
-        if: github.event.schedule != '* 11 * * *'
+        if: github.event.schedule != '0 11 * * 1-5'
         uses: ./
         with:
           mode: out
