--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,12 +31,12 @@ jobs:
         with:
           platforms: ${{ env.PLATFORMS }}
 
-      # - name: Setup - Github Container Registry
-      #   uses: docker/login-action@v2.1.0
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup - Github Container Registry
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
@@ -49,8 +49,10 @@ jobs:
         uses: docker/metadata-action@v4.4.0
         with:
           images: |
-            a901002666/punchin
+            ${{ secrets.DOCKER_USERNAME }}/punchin
+            ghcr.io/{{ github.repository }}
           tags: |
+            type=sha,priority=100
             type=raw,value=latest
 
       - name: Build
