--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
       packages: write
       
     env:
-      PLATROEMS: linux/amd64,linux/arm64
+      PLATFORMS: linux/amd64,linux/arm64
 
     steps:
       - name: Checkout
